--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RecipeApp</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main class="container">
       <section class="search-box">
-        <input type="text" id="search-input" placeholder="Type Dish Name...">
+        <input type="text" id="search-input" placeholder="Type Dish Name..." />
         <button id="search-button">Search</button>
       </section>
       <section id="result"></section>
     </main>
+    <script src="./index.js"></script>
   </body>
 </html>
